[current cvs]
	- Update xfs_growfs man page
	- Don't build libxlog.a with DEBUG enabled
	- xfs_db fixes from ASANO Masahiro at NEC

xfsprogs-2.0.4 (17 April 2002)
	- Minor update sync'ing with kernel changes (less endian
	  swabbing in libxfs code)

xfsprogs-2.0.3 (13 April 2002)
	- Important build system update, was causing libxfs to be
	  built incorrectly, which can cause xfs_repair to fail by
	  tripping asserts in additional libxfs debug code.

xfsprogs-2.0.2 (04 April 2002)
	- Bumped version of libhandle to libhandle.so.1.0.1
	  This changes open_by_handle() and friends so that 
	  O_LARGEFILE is added to the open flags.
	  This allows xfsdump to dump files greater than
	  2^31-1 bytes instead of not dumping the large
	  files and giving warning messages.

xfsprogs-2.0.1 (12 March 2002)
	- Fall back to BLKGETSIZE if BLKGETSIZE64 fails
	- Sync user/kernel headers and shared code

xfsprogs-2.0.0 (26 February 2002)
	- Major release to coincide with switch to new extended
	  attributes system call interfaces
	- bumped version of libhandle, added new symbols to use
	  the reworked extended attributes handle ioctl interface
	- xfs_repair in no-modify mode opens the filesystem device
	  read-only now (fix from Chris Pascoe)
	- sync up with recent (minor) changes to shared kernel code
	- switch to using the BLKGETSIZE64 ioctl in libxfs, instead
	  of the (previously busted) BLKGETSIZE ioctl

xfsprogs-1.3.19 (15 February 2002)
	- fix xfs_repair option parsing for external logs
	- add xfs_repair option parsing for realtime device
	- fix xfs_repair version (-V) option - should not
	  require an argument
	- add -V option to usage string
	- document verbose (-v) and -r options in manpage

xfsprogs-1.3.18 (17 January 2002)
	- fix mkfs.xfs buglet in overwriting signatures when run
	  on a regular file

xfsprogs-1.3.17 (14 January 2002)
	- mkfs.xfs overwrites pre-existing filesystem, swap, or md
	  driver signatures.
	- xfs_repair fix to prevent double insertion into the